[package]
name = "apigen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
handlebars = "6.0.0"
oas3 = "0.8.1"
serde = { version = "1.0" }
serde_json = "1.0"
thiserror = "1.0.63"
apigen-plugin-utils = { git = "https://github.com/naskopw/apigen-plugin-utils.git", tag = "v1.0.0" }
